# intraday-strategy-lab

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  MASTER_BLUEPRINT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: costs.yaml  default.yaml  killgate.yaml  universe.yaml
config/env/: dev.yaml  research.yaml
config/universe/: nifty50.yaml  study_panel.yaml
docs/: DATA_MANIFEST.md  PHASE3_HANDOFF.md  POST_PROJECT_DIRECTIONS.md  PROGRESS.md  RESEARCH_FINDINGS.md
docs/deep_dives/: 01_DeepDive_Data_and_Feature_Layer.md  02_DeepDive_Research_Layer.md
docs/operator_runbooks/: kite_data_setup.md
docs/pre_registration/: P3.10_gap_and_go.md  P3.10b_gap_fade.md  P3.11_opening_range_breakout.md  P3.12_bull_flag.md  P3.13_scalping.md  P3.14_ma_crossover.md  P3.1_vwap - Copy.md  P3.1_vwap.md  P3.1_vwap_panel.md  P3.2_breakout - Copy.md  P3.2_breakout.md  P3.3_mean_reversion.md  P3.4_reversal.md  P3.5_pivot_points.md  P3.6_donchian.md  P3.7_adaptive_ma.md  P3.8_volatility_filters.md  P3.9_momentum_pullback.md  P4.1_vwap_breakout_volume.md  P4.2_orb_vwap.md  P4.3_bollinger_rsi.md  P4.4_adaptive_ma_adx.md  P4.5_pivot_macd.md  P4.6_donchian_atr_stop.md
scripts/: dump_instrument_tokens.py  generate_nse_holidays.py  kite_login.py  run_backfill.py  run_panel_study.py  run_study.py
src/lab/core/: config.py  interfaces.py  logging.py  nse_calendar.py  secrets.py  types.py
src/lab/data/: universe.py
src/lab/data/brokers/: __init__.py  kite_adapter.py  kite_auth.py
src/lab/data/features/: compute.py  harness.py  indicators.py
src/lab/data/hygiene/: __init__.py  corp_actions.py  quality.py  screening.py  session.py  survivorship.py
src/lab/data/ingest/: __init__.py  backfill.py
src/lab/data/store/: __init__.py  parquet_archive.py
src/lab/research/: panel.py  study.py
src/lab/research/reports/: __init__.py  killgate.py  paper.py  report.py
src/lab/research/strategies/: __init__.py  adapter.py  adaptive_ma.py  adaptive_ma_adx.py  bollinger_rsi.py  breakout.py  bull_flag.py  donchian_atr_stop.py  donchian_breakout.py  gap_and_go.py  gap_fade.py  ma_crossover.py  mean_reversion.py  momentum_pullback.py  opening_range_breakout.py  orb_vwap.py  pivot_macd.py  pivot_reversion.py  reference.py  registry.py  reversal.py  scalping.py  volatility_filters.py  vwap.py  vwap_breakout_volume.py
src/lab/research/trials/: __init__.py
src/lab/research/validation/: backtester.py  costs.py  cpcv.py  pbo.py  robustness.py  sharpe.py  splitter.py
tests/adversarial/: test_leakage.py
tests/fixtures/: kite_historical_reliance_5min.json
tests/unit/: test_adaptive_ma_adx_spec.py  test_adaptive_ma_spec.py  test_atr_ratio.py  test_backfill.py  test_bollinger_rsi_spec.py  test_breakout_spec.py  test_broker_isolation.py  test_bull_flag_spec.py  test_classic_pivot_levels.py  test_config.py  test_cpcv_pbo.py  test_donchian_atr_stop_spec.py  test_donchian_breakout_spec.py  test_features.py  test_gap_and_go_spec.py  test_gap_fade_spec.py  test_hygiene.py  test_interfaces.py  test_intraday_donchian.py  test_intraday_zscore.py  test_kama_causality.py  test_kite_adapter.py  test_ledger.py  test_logging.py  test_ma_crossover_spec.py  test_mean_reversion_spec.py  test_metrics.py  test_momentum_pullback_spec.py  test_nse_calendar.py  test_opening_range_breakout_spec.py  test_orb_vwap_spec.py  test_panel.py  test_parquet_archive.py  test_pivot_macd_spec.py  test_pivot_reversion_spec.py  test_prior_donchian.py  test_registry.py  test_report_killgate.py  test_reversal_spec.py  test_robustness.py  (+13 more)
