[project]
name = "intraday-strategy-lab"
version = "0.0.0"
description = "Honest, cost-inclusive research apparatus for testing classic intraday trading strategies on liquid NSE cash equities using Zerodha Kite Connect historical candle data. Research-only."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Phase 0 runtime dependencies only. The data/feature stack (pandas, numpy,
# pyarrow, TA-Lib) and the research stack arrive with the phases that need them
# (P1.x, P2.x) so CI stays fast and green and no unused heavy/native
# dependency is pinned before it is used. See MASTER_BLUEPRINT.md Part I §2.
dependencies = [
    "pyyaml>=6.0.1",      # layered YAML config loader (P0.2)
    "structlog>=24.1.0",  # structured logging configured once in core/ (P0.3)
    "tzdata>=2024.1",     # IANA tz database for zoneinfo IST on Windows (P0.3/P0.4)
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

# --------------------------------------------------------------------------- #
# ruff — linter (formatting is delegated to black, per Part I §7)              #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks"]  # exploration only — never production logic (Part I §3)

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "PTH",       # flake8-use-pathlib (OS-portable paths, Part I §2)
    "TID",       # flake8-tidy-imports
    "PIE",       # flake8-pie
    "ERA",       # eradicate — no commented-out code (Part I §4)
    "S",         # flake8-bandit — basic security (no secrets/eval in code)
    "D",         # pydocstyle — docstrings on public API (Part I §5)
    "RUF",       # ruff-specific
]
# E501 (line length) is owned by black; D105/D107 documented at class level.
ignore = ["E501", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # absolute imports only, for unambiguous module paths

[tool.ruff.lint.per-file-ignores]
# Tests do not need docstrings and legitimately use asserts, fake secrets,
# and tmp paths — the flake8-bandit (S) checks are noise here.
"tests/**/*.py" = ["D", "S"]

# --------------------------------------------------------------------------- #
# black — formatter                                                           #
# --------------------------------------------------------------------------- #
[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "notebooks"

# --------------------------------------------------------------------------- #
# mypy — static typing everywhere; must pass in CI (Part I §7)                 #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src", "tests"]
strict = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "possibly-undefined", "truthy-bool"]
exclude = ["notebooks/"]

# --------------------------------------------------------------------------- #
# pytest                                                                       #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: integration tests (may touch the filesystem or fixtures)",
    "adversarial: leakage/skew tripwire tests",
]

[tool.coverage.run]
branch = true
source = ["lab"]

[tool.coverage.report]
show_missing = true
